--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ torchvision
 torchaudio
 psycopg2-binary
 scikit-learn
-# label-studio-sdk # If programmatic interaction with LabelStudio is needed
+label-studio
 # sqlalchemy # Optional ORM, consider adding if complex DB interactions are planned
 # stripe # For Stripe API integration 
