--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+### pip ###
 fastapi
 uvicorn[standard]
 redis
@@ -9,5 +10,7 @@ torchaudio
 psycopg2-binary
 scikit-learn
 label-studio
-# sqlalchemy # Optional ORM, consider adding if complex DB interactions are planned
-# stripe # For Stripe API integration 
+# sqlalchemy # consider adding if complex DB interactions are planned
+
+### homebrew (os level) ###
+# ffmpeg # for label-studio video processing
