--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,1 @@
-### pip ###
-fastapi
-uvicorn[standard]
-redis
-opencv-python-headless
-numpy
-torch
-torchvision
-torchaudio
-psycopg2-binary
-scikit-learn
-label-studio
-# sqlalchemy # consider adding if complex DB interactions are planned
-
-### homebrew (os level) ###
-# ffmpeg # for label-studio video processing
+ultralytics
