--- a/notebooks/runs/detect/train/args.yaml
+++ b/notebooks/runs/detect/train/args.yaml
@@ -1,12 +1,12 @@
 task: detect
 mode: train
-model: yolo11n.pt
+model: yolo11s.pt
 data: C:\Users\Angad Brar\Desktop\courtcast-API\notebooks\courtcast-1\data.yaml
-epochs: 10
+epochs: 50
 time: null
-patience: 100
-batch: 16
-imgsz: 640
+patience: 15
+batch: 4
+imgsz: 1280
 save: true
 save_period: -1
 cache: false
@@ -69,11 +69,11 @@ simplify: true
 opset: null
 workspace: null
 nms: false
-lr0: 0.01
+lr0: 0.001
 lrf: 0.01
 momentum: 0.937
 weight_decay: 0.0005
-warmup_epochs: 3.0
+warmup_epochs: 3
 warmup_momentum: 0.8
 warmup_bias_lr: 0.1
 box: 7.5
@@ -85,7 +85,7 @@ nbs: 64
 hsv_h: 0.015
 hsv_s: 0.7
 hsv_v: 0.4
-degrees: 0.0
+degrees: 5
 translate: 0.1
 scale: 0.5
 shear: 0.0
@@ -93,7 +93,7 @@ perspective: 0.0
 flipud: 0.0
 fliplr: 0.5
 bgr: 0.0
-mosaic: 1.0
+mosaic: 0.5
 mixup: 0.0
 cutmix: 0.0
 copy_paste: 0.0
